loops (need) ready for checking

--- a/loops/loops_(need).ipynb
+++ b/loops/loops_(need).ipynb
@@ -1,1 +1,315 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Loops (Need)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# What to expect in this chapter"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 1 The for iterator"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.1 for with a list"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.2 for with enumerate"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.3 for with range"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 2 while"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Loops (Need)</span></div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f3d9298b",
+   "metadata": {},
+   "source": [
+    "# What to expect in this chapter"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f6e042d1",
+   "metadata": {},
+   "source": [
+    "# 1 The for iterator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6d5b5e08-ca11-47b8-8454-bc91602de21c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "real_names = [\"Natasha Romanoff\", \"Tony Stark\", \"Stephen Strange\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c9b0d6cd-c8e6-4441-82d1-e9727952eae9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is a Marvel superhero!\n"
+     ]
+    }
+   ],
+   "source": [
+    "name=real_names[0]\n",
+    "print(f\"{name} is a Marvel superhero!\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b376db68",
+   "metadata": {},
+   "source": [
+    "## 1.1 for with a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "04d6614f-05b5-4a5c-9b63-049ffa77d8e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is a Marvel superhero!\n",
+      "Tony Stark is a Marvel superhero!\n",
+      "Stephen Strange is a Marvel superhero!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in real_names:\n",
+    "    print(f\"{name} is a Marvel superhero!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c28e4e80-f0af-4c82-8fd5-1c32c81db46c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is a Marvel superhero!\n",
+      "Tony Stark is a Marvel superhero!\n",
+      "Stephen Strange is a Marvel superhero!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in real_names:\n",
+    "    print(f\"{a} is a Marvel superhero!\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "dc3cc499",
+   "metadata": {},
+   "source": [
+    "## 1.2 for with enumerate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8960272a-a683-4c09-9513-ee68d33a88e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 'Natasha Romanoff'), (1, 'Tony Stark'), (2, 'Stephen Strange')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(enumerate(real_names)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0c4f9fce-5891-4e60-b71c-dd5dd3d63ddb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: Natasha Romanoff is a Marvel superhero!\n",
+      "1: Tony Stark is a Marvel superhero!\n",
+      "2: Stephen Strange is a Marvel superhero!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for count, name in enumerate(real_names):\n",
+    "    print(f'{count}: {name} is a Marvel superhero!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d60e3e82-8689-4c7b-8007-006ad1a6f5dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "super_names = [\"Black Widow\", \"Iron Man\", \"Doctor Strange\"]\n",
+    "real_names = [\"Natasha Romanoff\", \"Tony Stark\", \"Stephen Strange\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b788b02e-d71f-4bde-95df-3462a27b4371",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Black Widow!\n",
+      "Tony Stark is Iron Man!\n",
+      "Stephen Strange is Doctor Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, name in enumerate(real_names):\n",
+    "    superhero_name = super_names[index]\n",
+    "    print(f'{name} is {superhero_name}!')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "50be4067",
+   "metadata": {},
+   "source": [
+    "## 1.3 for with range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "30acb92b-64b0-4053-a791-fb13568611f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(2, 8, 2):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "85b0322e-9b34-41a8-b3ec-baf8b6c5a94e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "i in range(len(real_names))\n",
+    "print (i)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "605ee62d",
+   "metadata": {},
+   "source": [
+    "# 2 while"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "511dbf95-f5f7-4966-bd75-8cd3ed2d4346",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 0\n",
+    "\n",
+    "while number < 5:\n",
+    "    print(number)\n",
+    "    number += 1"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
