--- a/fundamentals  exercises/fundamentals_(good)_exercises.ipynb
+++ b/fundamentals  exercises/fundamentals_(good)_exercises.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "aa1159b4-064e-4d51-bd59-134589264b95",
    "metadata": {},
    "outputs": [
@@ -45,53 +45,32 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "score 0\n"
+      "score 102\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fail\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "score 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "your grade {'grade_A': 'A', 'grade_B': 'B', 'grade_C': 'C'}\n"
+      "It is not possible to get this score, please check again\n"
      ]
     }
    ],
    "source": [
-    "grades = {\n",
-    "    'grade_A' : 'A', \n",
-    "    'grade_B' : 'B',\n",
-    "    'grade_C' : 'C'\n",
-    "}\n",
     "score = float(input('score'))\n",
     "\n",
     "if 70 <= score <= 100:\n",
-    "    print(grades['grade_A'])\n",
+    "    print('A')\n",
     "elif 50 <= score <= 69:\n",
-    "    print(grades['grade_B'])\n",
+    "    print('B')\n",
     "elif 35 <= score <= 49:\n",
-    "    print(grades['grade_C'])\n",
+    "    print('C')\n",
+    "elif (score < 0 )| (score >100):\n",
+    "    print ('It is not possible to get this score, please check again')\n",
     "else:\n",
     "    print('Fail')\n",
     "\n",
-    "user_input = input('score')\n",
-    "\n",
-    "print('your grade', grades)\n",
-    "\n",
-    "#WHY DOES IT ONLY WORK ONE TIME???"
+    "#print(grades)"
    ]
   }
  ],
