--- a/loops  exercises/loops_(need)_exercises.ipynb
+++ b/loops  exercises/loops_(need)_exercises.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "id": "cb04d1cb-66bd-4218-8c8a-30adb624f447",
    "metadata": {},
    "outputs": [
@@ -89,11 +89,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 : 1  2  3  4  5  \n",
-      "2 : 2  4  6  8  10  \n",
-      "3 : 3  6  9  12  15  \n",
-      "4 : 4  8  12  16  20  \n",
-      "5 : 5  10  15  20  25  \n"
+      "1 :  1   2   3   4   5  \n",
+      "2 :  2   4   6   8  10  \n",
+      "3 :  3   6   9  12  15  \n",
+      "4 :  4   8  12  16  20  \n",
+      "5 :  5  10  15  20  25  \n"
      ]
     }
    ],
@@ -101,8 +101,9 @@
     "for i in range (1, 6):\n",
     "    print(f'{i} :', end=' ')\n",
     "    for x in range (1,6):\n",
-    "        print(f'{i * x:<0} ', end=' ')\n",
-    "    print('')    "
+    "        \n",
+    "        print(f'{i * x:2} ', end=' ')\n",
+    "    print('')   "
    ]
   }
  ],
